# htexpr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  codemeta.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml
docs/: conf.py  details.rst  htexpr.rst  index.rst  modules.rst  motivation.rst  usage.rst
docs/_static/css/: custom.css
examples/: bootstrap.py  test_dash.py  unicode_table.py
htexpr/: __init__.py  exceptions.py  htexpr.py  mappings.py
tests/: test_htexpr.py
