[tool.black]
line-length = 100
target_version = ['py36', 'py37', 'py38']
include = '\.py$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | __pycache__
    | env
    | \.pytest_cache
    | build
    | dist
    | examples
  )/
)
'''

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
junit_family = "xunit2"
