[tool.black]
line-length = 100
target_version = ['py37', 'py38', 'py39']
include = '\.py$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | __pycache__
    | env
    | \.pytest_cache
    | build
    | dist
    | examples
  )/
)
'''

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
junit_family = "xunit2"
