[tool.black]
line-length = 100
target_version = ['py38', 'py39', 'py310', 'py311']
include = '\.py$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | __pycache__
    | env
    | \.pytest_cache
    | build
    | dist
    | examples
  )/
)
'''

[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
junit_family = "xunit2"
